--- a/yaml/jobs/tenant-mocked-setup-grouped.yml
+++ b/yaml/jobs/tenant-mocked-setup-grouped.yml
@@ -11,8 +11,9 @@ parameters:
   type: string
 
 jobs:
-- job: tenantMockSetup
-  displayName: B2C Tenant Mock Setup 
+- deployment: tenantMockSetup
+  displayName: B2C Tenant Mock Setup
+  environment: ${{parameters.environmentName}}
   pool:
     vmImage: windows-latest
   variables:
@@ -31,91 +32,95 @@ jobs:
     value: ${{parameters.signinRedirectRoot}}
   - name: eapimRootUrl
     value: ${{parameters.eapimRootUrl}}
-  steps:
-    - task: Tokenization@2
-      displayName: Tokenise Policy Files
-      inputs:
-        SourcePath: '$(Build.SourcesDirectory)\policy\mocks\'
-        TargetFileNames: '*.xml'
-        RequireVariable: true
-        TokenStart: '{{'
-        TokenEnd: '}}'
-    - pwsh: |
-        $scriptPath = "$($env:BUILD_SOURCESDIRECTORY)\scripts\UploadFrameworkPolicy.ps1"
-        Write-Host Using Path : $scriptPath
-        Write-Host UPLOADER_PRINCIPAL_CLIENTID : $env:UPLOADER_PRINCIPAL_CLIENTID
-        Write-Host UPLOADER_PRINCIPAL_SECRET : $env:UPLOADER_PRINCIPAL_SECRET
-        Write-Host TENANT_ID : $env:TENANT_ID
 
-        $policyId = "B2C_1A_TrustFrameworkBase_Invitation_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\TrustFrameworkBase_Invitation_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+strategy:
+  runOnce:
+    deploy:
+      steps:
+        - task: Tokenization@2
+          displayName: Tokenise Policy Files
+          inputs:
+            SourcePath: '$(Build.SourcesDirectory)\policy\mocks\'
+            TargetFileNames: '*.xml'
+            RequireVariable: true
+            TokenStart: '{{'
+            TokenEnd: '}}'
+        - pwsh: |
+            $scriptPath = "$($env:BUILD_SOURCESDIRECTORY)\scripts\UploadFrameworkPolicy.ps1"
+            Write-Host Using Path : $scriptPath
+            Write-Host UPLOADER_PRINCIPAL_CLIENTID : $env:UPLOADER_PRINCIPAL_CLIENTID
+            Write-Host UPLOADER_PRINCIPAL_SECRET : $env:UPLOADER_PRINCIPAL_SECRET
+            Write-Host TENANT_ID : $env:TENANT_ID
 
-        $policyId = "B2C_1A_TrustFrameworkExtensions_Invitation_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\TrustFrameworkExtensions_Invitation_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_TrustFrameworkBase_Invitation_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\TrustFrameworkBase_Invitation_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Account_Signup_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Account_Signup_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_TrustFrameworkExtensions_Invitation_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\TrustFrameworkExtensions_Invitation_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Change_Email_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Change_Email_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_Account_Signup_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Account_Signup_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Find_Email_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Find_Email_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_Change_Email_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Change_Email_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Resend_Email_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Resend_Email_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_Find_Email_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Find_Email_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Password_Reset_Confirmation_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Password_Reset_Confirmation_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_Resend_Email_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Resend_Email_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Password_Reset_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Password_Reset_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_Password_Reset_Confirmation_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Password_Reset_Confirmation_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Signin_Invitation_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signin_Invitation_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_Password_Reset_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Password_Reset_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Signup_Confirmation_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signup_Confirmation_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_Signin_Invitation_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signin_Invitation_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        $policyId = "B2C_1A_Signup_Invitation_Mock"
-        $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signup_Invitation_Mock.xml"
-        Write-Host policyId : $policyId
-        Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+            $policyId = "B2C_1A_Signup_Confirmation_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signup_Confirmation_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
-        Write-Host 'Mock Policy Upload Complete'
-      env:
-        TENANT_ID: $(azureB2cTenantId)
-        UPLOADER_PRINCIPAL_SECRET: $(pipelineManagementClientSecret)
-        UPLOADER_PRINCIPAL_CLIENTID : $(pipelineManagementClientId)
-      displayName: Policy Upload
+            $policyId = "B2C_1A_Signup_Invitation_Mock"
+            $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signup_Invitation_Mock.xml"
+            Write-Host policyId : $policyId
+            Write-Host policyFile : $policyFile
+            Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
+
+            Write-Host 'Mock Policy Upload Complete'
+          env:
+            TENANT_ID: $(azureB2cTenantId)
+            UPLOADER_PRINCIPAL_SECRET: $(pipelineManagementClientSecret)
+            UPLOADER_PRINCIPAL_CLIENTID : $(pipelineManagementClientId)
+          displayName: Policy Upload
