--- a/yaml/jobs/deploy-grouped.yml
+++ b/yaml/jobs/deploy-grouped.yml
@@ -107,7 +107,7 @@ parameters:
 jobs:
 - deployment: Deploy
   displayName: Deploy Function and Front Door
-  environment: ${{parameters.environmentName}}
+  environment: 'ncs-b2c-${{parameters.environmentName}}'
   pool:
     vmImage: windows-latest
   variables:
