Make sure code is checked out

--- a/yaml/jobs/tenant-setup.yml
+++ b/yaml/jobs/tenant-setup.yml
@@ -49,6 +49,7 @@ jobs:
     runOnce:
       deploy:
         steps:
+          - checkout: self
           - task: Tokenization@2
             displayName: Tokenise Policy Files
             inputs:
