--- a/yaml/jobs/tenant-mocked-setup-grouped.yml
+++ b/yaml/jobs/tenant-mocked-setup-grouped.yml
@@ -37,6 +37,7 @@ jobs:
     runOnce:
       deploy:
         steps:
+          - checkout: self
           - task: Tokenization@2
             displayName: Tokenise Policy Files
             inputs:
