--- a/yaml/jobs/deploy-grouped.yml
+++ b/yaml/jobs/deploy-grouped.yml
@@ -226,7 +226,7 @@ jobs:
             functionUrl: $(armOutputs.armOutput.functionUrl)
             productName: 'NCS Identity'
             productRequiresSubscription: true
-            publishContactEmail: 'paul.sheridan@digital.education.gov.uk'
+            publishContactEmail: $(eapimPublishContactEmail)
             publishApiName: 'NCS Identity'
             publishApiOpenApiSchemaPath: '$(Build.SourcesDirectory)\definition.json'
             publishApiPath: ${{parameters.applicationName}}
