Update to new GovukNotify package and source

--- a/nuget.config
+++ b/nuget.config
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <clear />
-    <add key="Notify-UK" value="https://api.bintray.com/nuget/gov-uk-notify/nuget" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
 </configuration>
