Add contact details API version, comment tidyup

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -84,6 +84,7 @@ stages:
       ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
       ncsDssCustomersApiVersion: $(ncsDssCustomersApiVersion)
       ncsDssCreateContactApiUrlRoute: $(ncsDssCreateContactApiUrlRoute)
+      ncsDssContactDetailsApiVersion: $(ncsDssContactDetailsApiVersion)
       ncsDssCreateIdentityApiUrlRoute: $(ncsDssCreateIdentityApiUrlRoute)
       ncsDssDigitalIdentitiesApiVersion: $(ncsDssDigitalIdentitiesApiVersion)
       ncsDssGetCustomerUrlRoute: $(ncsDssGetCustomerUrlRoute)
@@ -155,6 +156,7 @@ stages:
       ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
       ncsDssCustomersApiVersion: $(ncsDssCustomersApiVersion)
       ncsDssCreateContactApiUrlRoute: $(ncsDssCreateContactApiUrlRoute)
+      ncsDssContactDetailsApiVersion: $(ncsDssContactDetailsApiVersion)
       ncsDssCreateIdentityApiUrlRoute: $(ncsDssCreateIdentityApiUrlRoute)
       ncsDssDigitalIdentitiesApiVersion: $(ncsDssDigitalIdentitiesApiVersion)
       ncsDssGetCustomerUrlRoute: $(ncsDssGetCustomerUrlRoute)
@@ -218,6 +220,7 @@ stages:
       ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
       ncsDssCustomersApiVersion: $(ncsDssCustomersApiVersion)
       ncsDssCreateContactApiUrlRoute: $(ncsDssCreateContactApiUrlRoute)
+      ncsDssContactDetailsApiVersion: $(ncsDssContactDetailsApiVersion)
       ncsDssCreateIdentityApiUrlRoute: $(ncsDssCreateIdentityApiUrlRoute)
       ncsDssDigitalIdentitiesApiVersion: $(ncsDssDigitalIdentitiesApiVersion)
       ncsDssGetCustomerUrlRoute: $(ncsDssGetCustomerUrlRoute)
@@ -272,6 +275,7 @@ stages:
       ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
       ncsDssCustomersApiVersion: $(ncsDssCustomersApiVersion)
       ncsDssCreateContactApiUrlRoute: $(ncsDssCreateContactApiUrlRoute)
+      ncsDssContactDetailsApiVersion: $(ncsDssContactDetailsApiVersion)
       ncsDssCreateIdentityApiUrlRoute: $(ncsDssCreateIdentityApiUrlRoute)
       ncsDssDigitalIdentitiesApiVersion: $(ncsDssDigitalIdentitiesApiVersion)
       ncsDssGetCustomerUrlRoute: $(ncsDssGetCustomerUrlRoute)
