--- a/src/B2CAzureFunc/local.settings.json
+++ b/src/B2CAzureFunc/local.settings.json
@@ -30,11 +30,12 @@
     "ncsdsssearchapiurl": "https://at.api.nationalcareersservice.org.uk/search/api/",
     "ncsdssapikey": "92f1fe387ea14bab9567403c4c1d5e72",
     "OcpApimSubscriptionKey": "92f1fe387ea14bab9567403c4c1d5e72",
-    "NcsDssSearchApiVersion": "v3",
+    "NcsDssSearchApiVersion": "v2",
     "resendSignupEmail": "Activate your account",
     "ncsdsscreatecustomerapiurl": "https://at.api.nationalcareersservice.org.uk/customers/api/Customers/",
     "NcsDssCustomersApiVersion": "v3",
     "ncsdsscreatecontactapiurl": "https://at.api.nationalcareersservice.org.uk/contactdetails/api/customers/{0}/ContactDetails/",
+    "NcsDssContactDetailsApiVersion": "v1",
     "ncsdsscreateidentityapiurl": "https://at.api.nationalcareersservice.org.uk/digitalidentities/api/identity",
     "NcsDssDigitalIdentitiesApiVersion": "v2",
     "TouchpointId": "1000000000",
